--- a/results/report.html
+++ b/results/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,64929],[],[[4,0,0,[],[1,2825,35768],[]],[5,0,0,[],[1,38594,26333],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,65408],[],[[4,0,0,[5],[1,2820,35938],[]],[6,0,0,[5],[1,38759,26647],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Cenario1","*C:\\Users\\radek\\Documents\\GitHub\\SISCON_SmokeTest\\tests\\cenario1.robot","*tests/cenario1.robot","*Cenário 1 : Validar criação de outages por Tcall","*Cenário 2 : Validar criação de fussy outages"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Cenario1","*C:\\Users\\radek\\Documents\\GitHub\\SISCON_SmokeTest\\tests\\cenario1.robot","*../tests/cenario1.robot","*Cenário 1 : Validar criação de outages por Tcall","*Smoke","*Cenário 2 : Validar criação de fussy outages"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:02","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:01:05","fail":0,"id":"s1","label":"Cenario1","name":"Cenario1","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:03","fail":0,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:01:03","fail":0,"label":"Smoke","pass":2,"skip":0}],[{"elapsed":"00:01:05","fail":0,"id":"s1","label":"Cenario1","name":"Cenario1","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1643649824225;
+window.output["baseMillis"] = 1643650450636;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 64971;
+window.output["generated"] = 65457;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
